--- a/Convertly/Views/Styles/ButtonStyle.xaml
+++ b/Convertly/Views/Styles/ButtonStyle.xaml
@@ -1,4 +1,68 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+
+    <ControlTemplate x:Key="MenuButtonTemplate" TargetType="Button">
+        
+        <Border x:Name="ButtonBorder" Margin="5"
+                CornerRadius="5" BorderBrush="LightGray"
+                BorderThickness="1" Background="LightGray"
+                Width="100" Height="50">
+
+            <ContentControl HorizontalAlignment="Center" VerticalAlignment="Center"
+                            FontSize="10" Content="{TemplateBinding Content}"/>
+
+        </Border>
+
+        <ControlTemplate.Triggers>
+            
+            <Trigger Property="IsMouseOver" Value="true">
+                <Setter TargetName="ButtonBorder" Property="Background" Value="LightBlue"/>
+            </Trigger>
+            
+            <Trigger Property="IsPressed" Value="true">
+                <Setter TargetName="ButtonBorder" Property="Background" Value="Blue"/>
+            </Trigger>
+            
+            <Trigger Property="IsEnabled" Value="false">
+                <Setter Property="Foreground" Value="Gray"/>
+                <Setter TargetName="ButtonBorder" Property="Background" Value="LightGray"/>
+            </Trigger>
+            
+        </ControlTemplate.Triggers>
+
+    </ControlTemplate>
     
+
+    <!--<Style x:Key="MenuButton" TargetType="Button">
+        <Setter Property="Width" Value="140"/>
+        <Setter Property="Height" Value="50"/>
+        <Setter Property="Margin" Value="10"/>
+    </Style>-->
+
+    <!--<ControlTemplate TargetType="Button" x:Key="MenuButtonTemplate">
+        <Border x:Name="buttonBorder"
+                Height="20">
+
+            <ContentControl FontSize="15"
+                            HorizontalAlignment="Center" 
+                            VerticalAlignment="Center"
+                            Content="{TemplateBinding Content}"/>
+
+        </Border>
+
+        <ControlTemplate.Triggers>
+            <Trigger Property="IsMouseOver" Value="true">
+                <Setter Property="FontWeight" Value="Bold"/>
+            </Trigger>
+            --><!--<Trigger Property="IsPressed" Value="true">
+                <Setter TargetName="buttonBorder" Property="Background" Value="LightGray"/>
+                <Setter TargetName="buttonBorder" Property="BorderBrush" Value="DarkBlue"/>
+            </Trigger>--><!--
+            <Trigger Property="IsEnabled" Value="false">
+                <Setter Property="Foreground" Value="Gray"/>
+                <Setter TargetName="buttonBorder" Property="Background" Value="LightGray"/>
+            </Trigger>
+        </ControlTemplate.Triggers>
+    </ControlTemplate>-->
+
 </ResourceDictionary>
